[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }

[[example]]
name = "async-rust-basics"
path = "./examples/async-rust/tokio/basics.rs"

[[example]]
name = "task-management-spawn"
path = "./examples/async-rust/tokio/task-management-spawn.rs"
