[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
colored = "3.0.0"
rand = "0.9.0"
tokio = { version = "1.44.1", features = ["full"] }

[[example]]
name = "async-rust-basics"
path = "./examples/async-rust/tokio/basics.rs"

[[example]]
name = "async-rust-basics-time-sleep"
path = "./examples/async-rust/tokio/basics-time-sleep.rs"

[[example]]
name = "async-rust-basics-time-interval"
path = "./examples/async-rust/tokio/basics-time-interval.rs"

[[example]]
name = "async-rust-basics-time-timeout"
path = "./examples/async-rust/tokio/basics-time-timeout.rs"

[[example]]
name = "task-management-spawn"
path = "./examples/async-rust/tokio/task-management-spawn.rs"

[[example]]
name = "task-management-join"
path = "./examples/async-rust/tokio/task-management-join.rs"

[[example]]
name = "task-management-spawn-join"
path = "./examples/async-rust/tokio/task-management-spawn-join.rs"

[[example]]
name = "task-management-task-failure"
path = "./examples/async-rust/tokio/task-management-task-failure.rs"

[[example]]
name = "task-management-task-cancellation"
path = "./examples/async-rust/tokio/task-management-task-cancellation.rs"

[[example]]
name = "task-management-task-precondition"
path = "./examples/async-rust/tokio/task-management-task-precondition.rs"

[[example]]
name = "task-management-else"
path = "./examples/async-rust/tokio/task-management-else.rs"

[[example]]
name = "task-management-biased"
path = "./examples/async-rust/tokio/task-management-biased.rs"

[[example]]
name = "task-management-timeout"
path = "./examples/async-rust/tokio/task-management-timeout.rs"

[[example]]
name = "task-management-joinset"
path = "./examples/async-rust/tokio/task-management-joinset.rs"

[[example]]
name = "task-management-joinset-abort"
path = "./examples/async-rust/tokio/task-management-joinset-abort.rs"

[[example]]
name = "task-management-joinset-blocking"
path = "./examples/async-rust/tokio/task-management-joinset-blocking.rs"

[[example]]
name = "io-asyncreadext"
path = "./examples/async-rust/tokio/io-asyncreadext.rs"

[[example]]
name = "concurrency-primitives-oneshot"
path = "./examples/async-rust/tokio/concurrency-primitives-oneshot.rs"

[[example]]
name = "concurrency-primitives-mpsc"
path = "./examples/async-rust/tokio/concurrency-primitives-mpsc.rs"
